Fix container alignment with bookmark cards

--- a/src/App.css
+++ b/src/App.css
@@ -226,7 +226,7 @@ h1 {
 .container {
   width: 45%;
   height: 80vh;
-  margin: 50px auto 50px 10%;
+  margin: 60px auto 50px 10%;
   background-color: rgba(0, 0, 0, 0.73);
   position: relative;
   border-radius: 15px;
